# dfa-app

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: DockWidget.h  GraphicsScene.h  MainWindow.h
include/GraphicsObjects/: StateGraphicObject.h
src/: DockWidget.cpp  GraphicsScene.cpp  MainWindow.cpp  main.cpp  main.py
src/Controllers/: GraphicsController.py
src/GraphicsObjects/: StateGraphicObject.cpp
src/Models/: State.py
src/Views/: GraphicsView.py  __init__.py
