[tool.poetry]
name = "dfa-app"
version = "0.1.0"
description = ""
authors = ["William Rossignol <williamrossignol2013@gmail.com>"]
readme = "README.md"
packages = [{include = "dfa_app"}]

[tool.poetry.dependencies]
python = ">3.8,<3.12"
PySide6 = "^6.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
